--- a/package.json
+++ b/package.json
@@ -7,10 +7,21 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@fortawesome/vue-fontawesome": "^2.0.6",
+    "@vuelidate/core": "^2.0.0-alpha.39",
+    "@vuelidate/validators": "^2.0.0-alpha.28",
+    "@vuepic/vue-datepicker": "^3.0.0",
+    "axios": "^0.26.1",
+    "bulma": "^0.9.3",
+    "bulma-calendar": "^6.1.17",
+    "bulma-switch": "^2.0.4",
+    "moment": "^2.29.1",
+    "tslib": "^2.3.1",
     "vue": "^3.0.0",
     "vue-class-component": "^8.0.0-0",
     "vue-router": "^4.0.0-0",
-    "vuex": "^4.0.0-0"
+    "vue-toastification": "^1.7.1",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-router": "~4.5.15",
@@ -18,6 +29,8 @@
     "@vue/cli-plugin-vuex": "~4.5.15",
     "@vue/cli-service": "~4.5.15",
     "@vue/compiler-sfc": "^3.0.0",
+    "sass": "^1.49.8",
+    "sass-loader": "~10.1.1",
     "typescript": "~4.1.5"
   }
 }
